# flask-todo-api

./: app.py  pyproject.toml
templates/: tasks.html
