[tool.poetry]
name = "flask-todo-api"
version = "0.1.0"
description = ""
authors = ["mr-steal-ur-code <cjkarkut@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-smorest = "^0.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
